--- a/custom_components/pro-language-switcher.html
+++ b/custom_components/pro-language-switcher.html
@@ -1,3 +1,4 @@
+<link rel='import' href='./pro-i18n-behaviour.html'>
 <link rel="import" href="../bower_components/paper-item/paper-item.html">
 <link rel="import" href="../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
 <link rel="import" href="../bower_components/paper-listbox/paper-listbox.html">
@@ -24,8 +25,8 @@
   <template>
     <paper-dropdown-menu label="Language" vertical-align="bottom" horizontal-align="left">
       <paper-listbox class="dropdown-content" selected="[[selectedLangIndex]]">
-        <paper-item>Spanish (ES)</paper-item>
-        <paper-item>English (EN)</paper-item>
+        <paper-item>{{t('pro-language-switcher-es')}}</paper-item>
+        <paper-item>{{t('pro-language-switcher-en')}}</paper-item>
       </paper-listbox>
     </paper-dropdown-menu>
   </template>
@@ -37,8 +38,17 @@
     Polymer({
       is: 'pro-language-switcher',
 
+      behaviors: [window.MyBehaviours.proI18nBehaviour],
+
       properties: {
         selectedLangIndex: Number
+      },
+
+      created: function() {
+        this.appendLocale('es', 'pro-language-switcher-es', 'Castellano (ES)');
+        this.appendLocale('en', 'pro-language-switcher-es', 'Spanish (ES)');
+        this.appendLocale('es', 'pro-language-switcher-en', 'Inglés (EN)');
+        this.appendLocale('en', 'pro-language-switcher-en', 'English (EN)');
       },
 
       attached: function(){
@@ -70,10 +80,10 @@
 
       _langChanged: function(newLangEvent){
         var newLang = newLangEvent.detail.value;
-        if(newLang === 'Spanish (ES)'){
+        if(newLang === es){
           this._langChange('es');
         }
-        if(newLang === 'English (EN)'){
+        if(newLang === en){
           this._langChange('en');
         }
       }
