fix - remove scroll bars from technologies menu

--- a/custom_components/pro-experience.html
+++ b/custom_components/pro-experience.html
@@ -59,7 +59,8 @@
 
       .techMenu{
         white-space: nowrap;
-        overflow-x: scroll;
+        overflow-x: auto;
+        overflow-y: hidden;
         height: 30px;
       }
 
