--- a/custom_components/pro-hoverable-item.html
+++ b/custom_components/pro-hoverable-item.html
@@ -33,10 +33,10 @@
       }
     </style>
 
-    <div class="icon item" on-mouseover='mouseover' on-mouseout='mouseout'>
+    <span class="icon item" on-mouseover='mouseover' on-mouseout='mouseout'>
       <iron-icon id="icon" class="icon transition" icon="{{icon}}"></iron-icon>
       <a href="{{url}}" target="_blank" class="anchor">{{text}}</a>
-    </div>
+    </span>
 
   </template>
 
