fix - rename last section title (aboutme - contact)

--- a/custom_components/pro-contact.html
+++ b/custom_components/pro-contact.html
@@ -69,8 +69,8 @@
         behaviors: [window.MyBehaviours.proI18nBehaviour],
 
         created: function() {
-          this.appendLocale('es', 'pro-contact-header', 'Perfil');
-          this.appendLocale('en', 'pro-contact-header', 'About me');
+          this.appendLocale('es', 'pro-contact-header', 'Contacto');
+          this.appendLocale('en', 'pro-contact-header', 'Contact');
 
           this.appendLocale('es', 'pro-contact-feedback', 'https://drive.google.com/open?id=1IqwXCu9Tz6h5NDAJUoorKMQKKSU56rAP_z7C23vhBwU');
           this.appendLocale('en', 'pro-contact-feedback', 'https://drive.google.com/open?id=1J0aTKh2dJnH31FBNNfXz1X1ZfoARmodfXGFDqpteDAE');
