--- a/custom_components/pro-profile.html
+++ b/custom_components/pro-profile.html
@@ -15,7 +15,11 @@
         border: solid 10px #eeeeee;
         height: auto;
         margin: 0 auto;
-        width: 75%;
+        width: 65%;
+      }
+      .img-container{
+        display: flex;
+        align-items: center;
       }
       .textHeader{
         text-align: center;
@@ -27,36 +31,38 @@
 
       @media (min-width: 600px) {
         .img {
-          width: 40%;
-          float: left;
-          margin-left: 5%;
-          margin-right: 5%;
-        }
-        .text {
-          min-height: 350px;
+          width: 50%;
         }
       }
 
-      @media (min-width: 950px) {
+      @media (min-width: 800px) {
+        .container{
+          display: flex;
+          margin: 0 5%;
+        }
+        .img-container{
+          flex: 1;
+        }
         .img {
-          width: 400px;
-          margin-left: 10%;
+          width: 300px;
         }
         .text {
-          min-height: 400px;
-          margin-right: 10%;
+          flex: 1;
+        }
+      }
+
+      @media (min-width: 1050px) {
+        .container{
+          margin: 0 15%;
         }
       }
 
       @media (min-width: 1300px) {
-        .img {
-          margin-left: 20%;
-          width: 40vh;
+        .container{
+          margin: 0 20%;
         }
-        .text {
-          margin-left: 20%;
-          margin-right: 20%;
-          min-height: 40vh;
+        .img {
+          width: 40vh;
         }
       }
 
@@ -75,26 +81,30 @@
     </style>
 
     <pro-section-header text="{{t('pro-profile-header')}}"></pro-section-header>
-    <img src="../images/smSquare.png" class="img" on-click="openDialog">
-    <div class="text">
-      <h2 class="textHeader">Héctor Moreno Cervera</h2>
-      <ul>
-        <li>
-          <p inner-h-t-m-l="{{t('pro-profile-about-me-1')}}"></p>
-        </li>
-        <li>
-          <p inner-h-t-m-l="{{t('pro-profile-about-me-2')}}"></p>
-        </li>
-        <li>
-          <p inner-h-t-m-l="{{t('pro-profile-about-me-3')}}"></p>
-        </li>
-        <li>
-          <p inner-h-t-m-l="{{t('pro-profile-about-me-4')}}"></p>
-        </li>
-        <li>
-          <p inner-h-t-m-l="{{t('pro-profile-about-me-5')}}"></p>
-        </li>
-      </ul>
+    <div class="container">
+      <div class="img-container">
+        <img src="../images/smSquare.png" class="img" on-click="openDialog">
+      </div>
+      <div class="text">
+        <h2 class="textHeader">Héctor Moreno Cervera</h2>
+        <ul>
+          <li>
+            <p inner-h-t-m-l="{{t('pro-profile-about-me-1')}}"></p>
+          </li>
+          <li>
+            <p inner-h-t-m-l="{{t('pro-profile-about-me-2')}}"></p>
+          </li>
+          <li>
+            <p inner-h-t-m-l="{{t('pro-profile-about-me-3')}}"></p>
+          </li>
+          <li>
+            <p inner-h-t-m-l="{{t('pro-profile-about-me-4')}}"></p>
+          </li>
+          <li>
+            <p inner-h-t-m-l="{{t('pro-profile-about-me-5')}}"></p>
+          </li>
+        </ul>
+      </div>
     </div>
     <paper-dialog id="dialog" class="dialog" with-backdrop>
       <img src="../images/profile.jpg" class="dialogImage" style="padding: 0; margin: 0;">
