refactor - rename journeys to places

--- a/custom_components/pro-place.html
+++ b/custom_components/pro-place.html
@@ -1,6 +1,6 @@
 <link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
 
-<dom-module id='pro-journey'>
+<dom-module id='pro-place'>
   <template>
     <style>
       :host {
@@ -61,7 +61,7 @@
       'use strict';
 
       Polymer({
-        is: 'pro-journey',
+        is: 'pro-place',
 
         properties: {
           imageUrl: {
