--- a/custom_components/pro-welcome.html
+++ b/custom_components/pro-welcome.html
@@ -27,7 +27,7 @@
 
     <template is="dom-if" if="{{queryMatches}}">
       <video class="videoCenter" autoplay loop muted>
-        <source src="{{imageUrl}}" type="video/mp4">
+        <source src="../images/welcome.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
     </template>
