feat - rename journeys to places in my-app

--- a/src/my-app.html
+++ b/src/my-app.html
@@ -36,10 +36,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </app-drawer>
 
     <div class="sections">
-      <pro-welcome class="fullVh" image-url="../src/welcome.mov"></pro-welcome>
+      <pro-welcome class="fullVh"></pro-welcome>
       <pro-profile class="sectionPadding"></pro-profile>
       <pro-experience class="sectionPadding"></pro-experience>
-      <pro-journeys class="sectionPadding"></pro-journeys>
+      <pro-places class="sectionPadding"></pro-places>
       <pro-contact class="sectionPadding"></pro-contact>
     </div>
 
