--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <meta name="msapplication-TileColor" content="#3f51b5">
     <meta name="msapplication-tap-highlight" content="no">
 
+    <link href="https://fonts.googleapis.com/css?family=Pacifico&text=Hecmor" rel="stylesheet">
+
+
     <script>
       // Setup Polymer options
       window.Polymer = {
