--- a/index.html
+++ b/index.html
@@ -14,36 +14,50 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=no">
 
-    <title>My App</title>
+    <title>Hecmocer</title>
     <meta name="description" content="My App description">
 
-    <link rel="icon" href="/images/favicon.ico">
+    <link rel="icon" href="/images/manifest/favicon.ico">
 
     <!-- See https://goo.gl/OOhYW5 -->
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="images/manifest/manifest.json">
 
     <!-- See https://goo.gl/qRE0vM -->
-    <meta name="theme-color" content="#3f51b5">
+    <meta name="theme-color" content="#ffffff">
 
     <!-- Add to homescreen for Chrome on Android. Fallback for manifest.json -->
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="application-name" content="My App">
+    <meta name="application-name" content="Hecmocer">
 
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="My App">
+    <meta name="apple-mobile-web-app-title" content="Hecmocer">
 
     <!-- Homescreen icons -->
+    <link rel="apple-touch-icon" sizes="57x57" href="images/manifest/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="images/manifest/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/manifest/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="images/manifest/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/manifest/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="images/manifest/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="images/manifest/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="images/manifest/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/manifest/apple-icon-180x180.png">
     <link rel="apple-touch-icon" href="/images/manifest/icon-48x48.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/images/manifest/icon-72x72.png">
     <link rel="apple-touch-icon" sizes="96x96" href="/images/manifest/icon-96x96.png">
     <link rel="apple-touch-icon" sizes="144x144" href="/images/manifest/icon-144x144.png">
     <link rel="apple-touch-icon" sizes="192x192" href="/images/manifest/icon-192x192.png">
 
+    <link rel="icon" type="image/png" sizes="192x192"  href="images/manifest/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/manifest/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="images/manifest/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/manifest/favicon-16x16.png">
+
     <!-- Tile icon for Windows 8 (144x144 + tile color) -->
-    <meta name="msapplication-TileImage" content="/images/manifest/icon-144x144.png">
-    <meta name="msapplication-TileColor" content="#3f51b5">
+    <meta name="msapplication-TileImage" content="/images/manifest/ms-icon-144x144.png">
+    <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-tap-highlight" content="no">
 
     <link href="https://fonts.googleapis.com/css?family=Pacifico&text=Hecmor" rel="stylesheet">
