feat - add cursor pointer on images

--- a/custom_components/pro-profile.html
+++ b/custom_components/pro-profile.html
@@ -10,6 +10,7 @@
         display: block;
       }
       .img{
+        cursor: pointer;
         display: block;
         border-radius: 50%;
         border: solid 10px #eeeeee;
