--- a/custom_components/pro-place.html
+++ b/custom_components/pro-place.html
@@ -28,6 +28,7 @@
       }
 
       .img{
+        cursor: pointer;
         max-height: 100%;
         max-width: 100%;
         border: solid rgba(0, 0, 0, 0.25) 1px
