feat - add image info on places/journeys

--- a/custom_components/pro-places.html
+++ b/custom_components/pro-places.html
@@ -23,72 +23,84 @@
 
         <pro-place
           image-url="../images/Rome.jpg"
+          image-info="Rome, Italy"
           text="{{t('pro-places-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-place>
 
         <pro-place
           image-url="../images/Germany.jpg"
+          image-info="Neuschwanstein, Germany"
           text="{{t('pro-places-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-place>
 
         <pro-place
           image-url="../images/Manzanares.jpg"
+          image-info="Manzanares el Real, Spain"
           text="{{t('pro-places-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-place>
 
         <pro-place
           image-url="../images/Paris.jpg"
+          image-info="Paris, France"
           text="{{t('pro-places-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-place>
 
         <pro-place
           image-url="../images/Brussels.jpg"
+          image-info="Brussels, Belgium"
           text="{{t('pro-places-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-place>
 
         <pro-place
           image-url="../images/Hillerod.jpg"
+          image-info="Hillerod, Denmark"
           text="{{t('pro-places-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-place>
 
         <pro-place
           image-url="../images/Helsinki.jpg"
+          image-info="Helsinki, Finland"
           text="{{t('pro-places-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-place>
 
         <pro-place
           image-url="../images/Stockholm.jpg"
+          image-info="Stockholm, Sweden"
           text="{{t('pro-places-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-place>
 
         <pro-place
           image-url="../images/Odense.jpg"
+          image-info="Odense, Denmark"
           text="{{t('pro-places-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-place>
 
         <pro-place
           image-url="../images/RUC.jpg"
+          image-info="RUC, Denmark"
           text="{{t('pro-places-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-place>
 
         <pro-place
           image-url="../images/Merida.jpg"
+          image-info="Merida, Spain"
           text="{{t('pro-places-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-place>
 
         <pro-place
           image-url="../images/London.jpg"
+          image-info="London, Great Britain"
           text="{{t('pro-places-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-place>
