--- a/custom_components/pro-place.html
+++ b/custom_components/pro-place.html
@@ -22,7 +22,7 @@
         overflow: hidden;
       }
 
-      .hoverable:hover{
+      .hoverable-hover{
         transform: translate(0, -8px);
         box-shadow: 0 40px 40px rgba(0,0,0,.16);
       }
@@ -32,6 +32,22 @@
         max-height: 100%;
         max-width: 100%;
         border: solid rgba(0, 0, 0, 0.25) 1px
+      }
+
+      .img-info {
+        opacity: 0;
+        position: relative;
+        color: white;
+        text-shadow: 0 0 5px black;
+        background-color: rgba(0,0,0,0.5);
+        padding: 10px;
+        left: 1px;
+        top: -55px;
+        transition: opacity 0.6s;
+      }
+      .img-info-hover{
+        opacity: 1;
+        top: -55px;
       }
 
       .dialog{
@@ -49,7 +65,8 @@
     </style>
 
     <div class="wrapper">
-      <img src="{{imageUrl}}" alt="" class="hoverable img" on-click="openDialog">
+      <img id="img" src="{{imageUrl}}" alt="" class="hoverable img" on-click="openDialog" on-mouseover="addHoverClass" on-mouseout="removeHoverClass">
+      <span id="imgInfo" class="img-info" on-mouseover="addHoverClass" on-mouseout="removeHoverClass">[[imageInfo]]</span>
     </div>
 
     <paper-dialog id="dialog" class="dialog" with-backdrop>
@@ -71,7 +88,21 @@
 
           text: {
             type: String
+          },
+
+          imageInfo: {
+            type: String
           }
+        },
+
+        addHoverClass: function(){
+          this.$.imgInfo.classList.add('img-info-hover');
+          this.$.img.classList.add('hoverable-hover');
+        },
+
+        removeHoverClass: function(){
+          this.$.imgInfo.classList.remove('img-info-hover');
+          this.$.img.classList.remove('hoverable-hover');
         },
 
         openDialog: function() {
