feat - add another place: extremadura

--- a/custom_components/pro-places.html
+++ b/custom_components/pro-places.html
@@ -91,16 +91,23 @@
           class="xs12 s6 m4 l3">
         </pro-place>
 
-        <pro-place
+        <!--<pro-place
           image-url="../images/Merida.jpg"
           image-info="Merida, Spain"
+          text="{{t('pro-places-textn')}}"
+          class="xs12 s6 m4 l3">
+        </pro-place>-->
+
+        <pro-place
+          image-url="../images/London.jpg"
+          image-info="London, Great Britain"
           text="{{t('pro-places-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-place>
 
         <pro-place
-          image-url="../images/London.jpg"
-          image-info="London, Great Britain"
+          image-url="../images/Extremadura.jpg"
+          image-info="Extremadura, Spain"
           text="{{t('pro-places-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-place>
