fix - fix errors detected on device

--- a/custom_components/pro-profile.html
+++ b/custom_components/pro-profile.html
@@ -108,7 +108,7 @@
       </div>
     </div>
     <paper-dialog id="dialog" class="dialog" with-backdrop>
-      <img src="../images/profile.jpg" class="dialogImage" style="padding: 0; margin: 0;">
+      <img src="../images/Profile.jpg" class="dialogImage" style="padding: 0; margin: 0;">
     </paper-dialog>
 
   </template>
