--- a/custom_components/pro-welcome.html
+++ b/custom_components/pro-welcome.html
@@ -37,7 +37,7 @@
       .overlay-scroll{
         position: absolute;
         background: rgba(0,0,0,0.5);
-        color: #ffeeee;
+        color: #eeeeee;
         display: flex;
         justify-content: center;
         align-items: center;
