--- a/custom_components/pro-place.html
+++ b/custom_components/pro-place.html
@@ -66,7 +66,7 @@
 
     <div class="wrapper">
       <img id="img" src="{{imageUrl}}" alt="" class="hoverable img" on-click="openDialog" on-mouseover="addHoverClass" on-mouseout="removeHoverClass">
-      <span id="imgInfo" class="img-info" on-mouseover="addHoverClass" on-mouseout="removeHoverClass">[[imageInfo]]</span>
+      <span id="imgInfo" class="img-info" on-click="openDialog" on-mouseover="addHoverClass" on-mouseout="removeHoverClass">[[imageInfo]]</span>
     </div>
 
     <paper-dialog id="dialog" class="dialog" with-backdrop>
